@@ -1,3 +1,9 @@
+2004-12-28 16:38 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormPalettesManager.m: Enhancment in loadPalette: to allow
+	loading using either the plist or the strings format for 
+	palette.table.
+
 2004-12-28 12:10 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/1Windows/GormNSPanel.m
